--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -53,6 +53,15 @@ html,body{
 .navbar{
   padding: 0.5rem 0px !important;
 }
+.dropdown-toggle{
+  border-radius: 50% !important;
+    padding: 13px !important;
+    text-align: center !important;
+}
+
+.dropdown{
+  margin-right: 2rem !important;
+}
 .navbar-collapse.show, .navbar-collapse.collapsing{
   background: black !important;
     padding: 2rem 2rem !important;
@@ -648,7 +657,7 @@ tbody tr{
   border-bottom: 1px solid #E0E0E0 !important;
 }
 tbody td{
-  padding: 1.5rem 2rem !important;
+  padding: 1.5rem 1rem !important;
 }
 .table-category-flex{
   display: flex !important;
